--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,3 +30,15 @@
         padding-left: 20px;     
   }
 }
+
+#informacion_personal {
+    background-color: transparent;
+}
+
+#experiencia {
+    background-color: transparent;
+}
+
+#habilidades {
+    background-color: transparent;
+}
